tests/baselines/reference/ES5SymbolProperty6.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(2,6): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(5,9): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.


==== tests/cases/conformance/Symbols/ES5SymbolProperty6.ts (2 errors) ====
    class C {
        [Symbol.iterator]() { }
         ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.